i don't really know what i changed

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "victim_string_prefix": "vc foi spammado pelo b1scoito#0017, nao tem discord? t.me/@biscoito.",
+    "victim_string_prefix": "",
     "pc_name": "b1scoito-PC",
     "username": "b1scoito",
     "install_time": "199-991-199-911",
